Less disruptive styling for inline validation, it no longer shifts the form around in a significant way.
svn path=/plonetheme.sunburst/trunk/; revision=35651

--- a/plonetheme/sunburst/skins/sunburst_styles/public.css
+++ b/plonetheme/sunburst/skins/sunburst_styles/public.css
@@ -1366,6 +1366,10 @@ div.error {
 }
 div.error.warning {
 	background-color: transparent;
+	border: none;
+	outline: 2px solid red;
+	margin-top: 0;
+	padding: 0;
 }
 
 input.inputLabelActive {
